test/langtools/tools/javac/specialConstantFolding/EffectivelyFinalTestNeg.out
EffectivelyFinalTestNeg.java:21:28: compiler.err.intrinsics.ldc.must.have.constant.arg
EffectivelyFinalTestNeg.java:26:28: compiler.err.intrinsics.ldc.must.have.constant.arg
EffectivelyFinalTestNeg.java:34:30: compiler.err.intrinsics.ldc.must.have.constant.arg
EffectivelyFinalTestNeg.java:42:36: compiler.err.intrinsics.ldc.must.have.constant.arg
EffectivelyFinalTestNeg.java:52:30: compiler.err.intrinsics.ldc.must.have.constant.arg
5 errors
